# mj_prompt_studio

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
client/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
client/e2e/: parity.spec.ts
client/src/: main.tsx
client/src/app/: App.tsx  styles.css
client/src/features/ai-inspector/: AIInspector.tsx
client/src/features/composer/: ComposerView.tsx  ParameterInspector.tsx
client/src/features/free-editor/: FreeEditorView.tsx
client/src/features/jobs/: JobsPanel.tsx
client/src/features/matrix-lab/: MatrixLabView.tsx
client/src/features/prompt-doctor/: PromptDoctorPanel.tsx
client/src/features/reference-library/: ReferenceLibraryView.tsx
client/src/features/result-review/: ResultReviewView.tsx
client/src/features/settings/: SettingsView.tsx
client/src/shared/api/: client.ts
client/src/shared/components/: ConfirmDialog.tsx
client/src/shared/types/: api.ts  openapi.json
client/tests/: app-shell.test.tsx  prompt-utils.test.ts
docs/: architecture.md  llm-agents.md  quick-start.md  rulesets.md  security.md  ui-spec.md  user-manual.md
docs/process/: ci.md  task-execution.md
plans/: TEMPLATE.md  goal-mj-prompt-studio.md  react-typescript-migration.md  visual-match-screenshots.md
scripts/: __init__.py  generate_openapi.py  run_app.py  run_local_app.py  verify_ui_text.py
src/mj_prompt_studio/: __init__.py  config.py
src/mj_prompt_studio/app/: app_context.py  export_options.py  main.py  main_window.py
src/mj_prompt_studio/application/: __init__.py  free_editor_transform.py  services.py
src/mj_prompt_studio/domain/: __init__.py  matrix.py  prompt_compiler.py  prompt_document.py  prompt_hash.py  reference.py  ruleset.py  validator.py
src/mj_prompt_studio/infra/: __init__.py  asset_store.py  image_probe.py  migrations.py  ruleset_loader.py  secret_store.py  settings_store.py  sqlite_repository.py
src/mj_prompt_studio/llm/: __init__.py  job_queue.py  mock_client.py  openai_client.py  orchestrator.py  response_schemas.py
src/mj_prompt_studio/server/: __init__.py  app_state.py  main.py  schemas.py  serialization.py
src/mj_prompt_studio/ui/: strings.py
tests/: test_api_contract.py  test_api_server.py  test_app_context.py  test_job_queue.py  test_llm_mock_and_schemas.py  test_matrix_export.py  test_prompt_compiler.py  test_reference_metadata.py  test_ruleset_loader.py  test_runtime_settings.py  test_storage.py  test_ui_smoke.py  test_ui_text_policy.py  test_validator.py  test_workflows.py
(+28 files in other folders)
