[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mj-prompt-studio"
version = "0.1.0"
description = "Local desktop prompt design studio for image generation workflows."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "openai>=1.99",
  "pillow>=11.0",
  "pydantic>=2.8",
  "python-multipart>=0.0.20",
  "uvicorn[standard]>=0.32",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "httpx>=0.27",
  "pytest>=8.0",
  "ruff>=0.6",
  "mypy>=1.11",
]

[project.scripts]
mj-prompt-studio = "mj_prompt_studio.server.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mj_prompt_studio = [
  "resources/rulesets/*.json",
  "resources/templates/*.json",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["RUF012"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_unused_configs = true
mypy_path = "src"
packages = ["mj_prompt_studio"]

[[tool.mypy.overrides]]
module = ["openai.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
